16978
```scala
object Test extends App {
  def tagme[T: TypeTag](x: T) = typeTag[T]
  val foo = tagme{object Bar; Bar}
}
```
```scala
typechecking macro expansion `package`.this.materializeTypeTag[Bar.type](scala.reflect.`package`.mirror) at source-C:\Projects\Kepler\sandbox\Test.scala,line-3,offset=87
reifying = Bar.type
prefix = scala.reflect.`package`.mirror
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
Free term: object Bar(module)
macro expansion has failed: ?
Test.scala:3: error: No TypeTag available for Bar.type
  val foo = tagme{object Bar; Bar}
                 ^
one error found
```
